[kits] firefox flexbox align items fix

--- a/app/assets/stylesheets/kit.css.sass
+++ b/app/assets/stylesheets/kit.css.sass
@@ -129,6 +129,7 @@
     @include flex-wrap(wrap)
     @include justify-content(space-around)
     @include align-content(space-around)
+    @include align-items(center)
     @include transition(300ms all $standard-bezier)
 
     .kit-nav-toggle
